Blocked redirected main resource requests need descriptive errors https://bugs.webkit.org/show_bug.cgi?id=156828 rdar://problem/25711316

Reviewed by Daniel Bates.

Source/WebCore:

Test: http/tests/contentextensions/main-resource-redirect-error.html

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::startLoadingMainResource):
Call cancelMainResourceLoad() so that InjectedBundlePage::didFailProvisionalLoadWithErrorForFrame()
is called to be consistent with blocked redirected main resource requests.
* loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::willSendRequestInternal):
(WebCore::ResourceLoader::blockedError):
(WebCore::ResourceLoader::blockedByContentBlockerError):
(WebCore::ResourceLoader::cannotShowURLError):
* loader/ResourceLoader.h:
Use a blockedByContentBlockerError() instead of a cannotShowURLError() when we blocked the load.

Tools:

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::didFailProvisionalLoadWithErrorForFrame):
Print out the error type to make sure we have the most descriptive error type.

LayoutTests:

* http/tests/contentextensions/block-everything-if-domain-expected.txt:
Updated because the page no longer loads because the main resource was blocked.
* http/tests/contentextensions/block-everything-unless-domain-expected.txt:
* http/tests/contentextensions/block-everything-unless-domain.html:
Updated test because about:blank is no longer loaded when the main resource fails to load.
* http/tests/contentextensions/main-resource-expected.txt:
Update to reflect new behavior of calling didFailProvisionalLoadWithError instead of just didFailLoadingWithError.
* http/tests/contentextensions/main-resource-redirect-error-expected.txt: Added.
* http/tests/contentextensions/main-resource-redirect-error.html: Added.
* http/tests/contentextensions/main-resource-redirect-error.html.json: Added.
* http/tests/contentextensions/main-resource.html:



Canonical link: https://commits.webkit.org/175493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200461 268f45cc-cd09-0410-ab3c-d52691b4dbfc