Source/WebCore/loader/ResourceLoader.cpp
@@ -346,8 +346,11 @@ void ResourceLoader::willSendRequestInternal(ResourceRequest& request, const Res
     if (frameLoader()) {
         Page* page = frameLoader()->frame().page();
         if (page && m_documentLoader) {
-            if (page->userContentProvider().processContentExtensionRulesForLoad(request, m_resourceType, *m_documentLoader) == ContentExtensions::BlockedStatus::Blocked)
+            if (page->userContentProvider().processContentExtensionRulesForLoad(request, m_resourceType, *m_documentLoader) == ContentExtensions::BlockedStatus::Blocked) {
                 request = { };
+                didFail(blockedByContentBlockerError());
+                return;
+            }
         }
     }
 #endif
@@ -601,6 +604,11 @@ ResourceError ResourceLoader::cancelledError()
 ResourceError ResourceLoader::blockedError()
 {
     return frameLoader()->client().blockedError(m_request);
+}
+
+ResourceError ResourceLoader::blockedByContentBlockerError()
+{
+    return frameLoader()->client().blockedByContentBlockerError(m_request);
 }
 
 ResourceError ResourceLoader::cannotShowURLError()
