Source/WebCore/loader/ResourceLoader.h
@@ -84,6 +84,7 @@ public:
     WEBCORE_EXPORT void cancel(const ResourceError&);
     WEBCORE_EXPORT ResourceError cancelledError();
     ResourceError blockedError();
+    ResourceError blockedByContentBlockerError();
     ResourceError cannotShowURLError();
     
     virtual void setDefersLoading(bool);
